# ChangeLog for media-libs/libpixman
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/libpixman/Attic/ChangeLog,v 1.26 2005/09/13 19:58:32 agriffis Exp $

  13 Sep 2005; Aron Griffis <agriffis@gentoo.org> libpixman-0.1.3.ebuild:
  Mark 0.1.3 stable on alpha

*libpixman-0.1.6 (31 Jul 2005)

  31 Jul 2005; Marinus Schraal <foser@gentoo.org> libpixman-0.1.6.ebuild :
  New release

  12 Jul 2005; Stephen P. Becker <geoman@gentoo.org> libpixman-0.1.2.ebuild:
  stable on mips

*libpixman-0.1.5 (10 Jul 2005)

  10 Jul 2005; Tom Payne <twp@gentoo.org> +libpixman-0.1.5.ebuild:
  Version bump. Bug # 93759.

  17 Jun 2005; Michael Hanselmann <hansmi@gentoo.org>
  libpixman-0.1.2.ebuild:
  Stable on ppc.

  08 May 2005; Aron Griffis <agriffis@gentoo.org> libpixman-0.1.3.ebuild:
  stable on ia64

*libpixman-0.1.4 (11 Apr 2005)

  11 Apr 2005; Peter Johanson <latexer@gentoo.org> +libpixman-0.1.4.ebuild:
  Bump. See bug #85285

  07 Apr 2005; Simon Stelling <blubb@gentoo.org> libpixman-0.1.2.ebuild:
  stable on amd64

  07 Mar 2005; Markus Rothe <corsair@gentoo.org> libpixman-0.1.3.ebuild:
  Stable on ppc64

  26 Jan 2005; Markus Rothe <corsair@gentoo.org> libpixman-0.1.3.ebuild:
  Added ~ppc64 to KEYWORDS

*libpixman-0.1.3 (25 Jan 2005)

  25 Jan 2005; Tom Payne <twp@gentoo.org> -libpixman-0.1.0.ebuild,
  +libpixman-0.1.3.ebuild:
  Version bump. Bug # 79335. Removed old version.

  22 Jan 2005; Bryan Østergaard <kloeri@gentoo.org> libpixman-0.1.2.ebuild:
  Stable on alpha.

  10 Jan 2005; Gustavo Zacarias <gustavoz@gentoo.org> libpixman-0.1.2.ebuild:
  Stable on sparc

  10 Jan 2005; Tom Payne <twp@gentoo.org> libpixman-0.1.2.ebuild:
  Stable on x86.

  21 Dec 2004; Bryan Østergaard <kloeri@gentoo.org> libpixman-0.1.1.ebuild:
  Stable on alpha.

  20 Dec 2004; Dylan Carlson <absinthe@gentoo.org> libpixman-0.1.1.ebuild:
  Stable on amd64.
