@@ -1,8 +1,8 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-DIST libpixman-0.1.1.tar.gz 361389
-DIST libpixman-0.1.2.tar.gz 367637
+DIST libpixman-0.1.1.tar.gz 361389 RMD160 f499dfbf40f7acaafa5dfd86503734d38e269a89 SHA1 fcd5b1a30ad621f170392add673f880d3707ba82 SHA256 56f1e616dfa3870ab66ed0f35136cf4e479c85a38cb03dc38b2e359890f3ccd7
+DIST libpixman-0.1.2.tar.gz 367637 RMD160 d72a6e58eba04b56992a63e8056589fa89399b10 SHA1 131940aee04f8ed757b834d9dd9584d0ecc76348 SHA256 175c2e35d22274e2368cea4f2cafa4f1c1fb63b2ed0f6531e70ab98df27fbef3
 DIST libpixman-0.1.3.tar.gz 371766 RMD160 777f0ad9e43428555d4da95bbe19576362675e76 SHA1 eca26dc881227f983022203aafe8e2d4d0bff8ee SHA256 eb0f36c2a909ef21d4bd36ca43e319228bcf4053545fddb497f0dc2cbf798e4b
 DIST libpixman-0.1.4.tar.gz 375226 RMD160 2a04690620c5cedc56537d8ed8315f9e5aedd13f SHA1 399d8e1cd3898c324ec2bf8c3fd0b2bbc680bc18 SHA256 f563ce270beb9fa684475f1d6dd10b5bec352dca728c7c54f71a4622f10ac59d
 DIST libpixman-0.1.5.tar.gz 379180 RMD160 81f03fe6ee2c986352825241cdbc75e329233080 SHA1 5d05aee3705a1609e7b09b6cd9d3fae443231094 SHA256 4d18f3d9dbbe877b4cfd240891b711179e2ac8b8ad61392aa309e35d9c912d63
@@ -15,10 +15,10 @@ EBUILD libpixman-0.1.2.ebuild 542 RMD160 81322b6aa9e43120b59952d107edb99be598c80
 MD5 525f4958eb76a3b9235ba4281eb3d1ad libpixman-0.1.2.ebuild 542
 RMD160 81322b6aa9e43120b59952d107edb99be598c801 libpixman-0.1.2.ebuild 542
 SHA256 54f196bb789f322630b75b0b8fc379d06ea7589333d2a4efb0cb3957b6f6d53f libpixman-0.1.2.ebuild 542
-EBUILD libpixman-0.1.3.ebuild 564 RMD160 5923a0bd37d60cc8572d1f409c6bcc477c961ceb SHA1 b362b7630617abbfe72ca460d63e33913fe25cd9 SHA256 4a4523fa3712ad76b6fd9192ad4cbcc3d6ac108693c2d2d02c60834d697e84a9
-MD5 326f3a9d91448afa3266d2bbb16a1ee9 libpixman-0.1.3.ebuild 564
-RMD160 5923a0bd37d60cc8572d1f409c6bcc477c961ceb libpixman-0.1.3.ebuild 564
-SHA256 4a4523fa3712ad76b6fd9192ad4cbcc3d6ac108693c2d2d02c60834d697e84a9 libpixman-0.1.3.ebuild 564
+EBUILD libpixman-0.1.3.ebuild 565 RMD160 4c192c7b7f62f5f44f4a894901405a5c3c2d381a SHA1 db82305b8ac676c75cb64693b28ab8936da154be SHA256 2a7e7d91005d6b99baeca6e04437aa5d4e1f7ddc99add09e38c740ad0d0671d5
+MD5 72764fa0329532bea80123b1114a7783 libpixman-0.1.3.ebuild 565
+RMD160 4c192c7b7f62f5f44f4a894901405a5c3c2d381a libpixman-0.1.3.ebuild 565
+SHA256 2a7e7d91005d6b99baeca6e04437aa5d4e1f7ddc99add09e38c740ad0d0671d5 libpixman-0.1.3.ebuild 565
 EBUILD libpixman-0.1.4.ebuild 569 RMD160 dddbe412fd331193f25bcee3e6bb4753b94f06f8 SHA1 effca316ac86c26cdc34f0c9a6d8f6435afbe46f SHA256 07b68b616bf19773a417d894352e7847418f4488dd7f6dcb62682e7fd6a7a197
 MD5 9e7ded96b8b022b77c43065d66bf03cb libpixman-0.1.4.ebuild 569
 RMD160 dddbe412fd331193f25bcee3e6bb4753b94f06f8 libpixman-0.1.4.ebuild 569
@@ -31,20 +31,20 @@ EBUILD libpixman-0.1.6.ebuild 570 RMD160 d4e1195a4995d565f38f356ed7f39c2e3e8c054
 MD5 407cf6e7a8f272ceb8795c80b8f80c99 libpixman-0.1.6.ebuild 570
 RMD160 d4e1195a4995d565f38f356ed7f39c2e3e8c0549 libpixman-0.1.6.ebuild 570
 SHA256 80b0cd0a285d2fa8f739b6c9646d0f572a90097d01b46485b7d5ceeb2f5ea771 libpixman-0.1.6.ebuild 570
-MISC ChangeLog 2890 RMD160 4edd91f70afb592bea1d2d433f7849075935c6c6 SHA1 212a71839e642bb417ce4c615f3c62d30574677a SHA256 746348d3eadafb0bc7c1bb53eb72f025f94b48195166fa12da088d92b0b8b7b0
-MD5 ebb98158f55a71d0bfa0262ee82a4aef ChangeLog 2890
-RMD160 4edd91f70afb592bea1d2d433f7849075935c6c6 ChangeLog 2890
-SHA256 746348d3eadafb0bc7c1bb53eb72f025f94b48195166fa12da088d92b0b8b7b0 ChangeLog 2890
+MISC ChangeLog 2989 RMD160 eb4bc08ece2bf42ab6ca45113b481f4f12f7a8a9 SHA1 b674610c396f376ee6c00474c5b73c90df75e287 SHA256 2610d119ebf7213bd79f66346f29c9231c5d9541d3b97186cd6fd0b8ab8b3396
+MD5 2ea1ddaa5b332c63c7f6ab63027634e3 ChangeLog 2989
+RMD160 eb4bc08ece2bf42ab6ca45113b481f4f12f7a8a9 ChangeLog 2989
+SHA256 2610d119ebf7213bd79f66346f29c9231c5d9541d3b97186cd6fd0b8ab8b3396 ChangeLog 2989
 MISC metadata.xml 244 RMD160 10fcb6c60f0d88174ff99fd391d0da3a75bdf89d SHA1 bee870f83b6bd74feedef2b9ff8da8f4820cc19f SHA256 c7b6d3457d4746a2b281c4ac598bcf78b8e1553d8d63f2523b4cd0f4eaa422b1
 MD5 d992d28bec4a3bfd72b441145091a58e metadata.xml 244
 RMD160 10fcb6c60f0d88174ff99fd391d0da3a75bdf89d metadata.xml 244
 SHA256 c7b6d3457d4746a2b281c4ac598bcf78b8e1553d8d63f2523b4cd0f4eaa422b1 metadata.xml 244
-MD5 b97798ce636b5aa23d4cadace68d34e7 files/digest-libpixman-0.1.1 67
-RMD160 ff68dc76dd3314f3b22a7a90890d75f5cc3b2679 files/digest-libpixman-0.1.1 67
-SHA256 608b383efacb8919317c9a11692418bb1144e6cb697cf739d05092520284af66 files/digest-libpixman-0.1.1 67
-MD5 fd163abca26f360a81c467ae715a88ca files/digest-libpixman-0.1.2 67
-RMD160 54f24200c6b3ee20233f8f26e27333468b80bd9e files/digest-libpixman-0.1.2 67
-SHA256 f3932f4d202cbb75e79edf33cc50514a5c66ec916624f825b2bfdb17bb5879b4 files/digest-libpixman-0.1.2 67
+MD5 b65c3114eaf4184ece5dcb08a89c6f49 files/digest-libpixman-0.1.1 247
+RMD160 962d00f4b7bf33d879665e4c766560578442658e files/digest-libpixman-0.1.1 247
+SHA256 3253bc10eeba9a5f63d370be75fc5cacebdeb74e615d80a6318d32c0978bdaa0 files/digest-libpixman-0.1.1 247
+MD5 c480123056b131a564baa9d1848f8fa5 files/digest-libpixman-0.1.2 247
+RMD160 73023df465a51f7b14c8cfaf41bdbee215415872 files/digest-libpixman-0.1.2 247
+SHA256 fbcff208a9d2e56757a18e320b3218d711f485aadbcdab2690a2d6423f56b229 files/digest-libpixman-0.1.2 247
 MD5 f520d0c6b7a4a4951b9df46eb9bbf217 files/digest-libpixman-0.1.3 247
 RMD160 cd685f8a0ce652225431ad634e9a65f674023d09 files/digest-libpixman-0.1.3 247
 SHA256 3e145a8dbaa0dd672768b68e10c0268cc3eaf514bff27da6beb56e0a63c0b631 files/digest-libpixman-0.1.3 247
@@ -58,9 +58,9 @@ MD5 02c339e7de6d7febb4b5d2c6668357ea files/digest-libpixman-0.1.6 247
 RMD160 9d252258071ce4f2524fc0a24428618f81b442db files/digest-libpixman-0.1.6 247
 SHA256 738651bb18df94089fd3f66d63b19cf206d2a54d16c934d6612c48a444089d8b files/digest-libpixman-0.1.6 247
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.4.5 (GNU/Linux)
+Version: GnuPG v1.4.6-ecc01.6 (GNU/Linux)
 
-iD8DBQFFTHkRamhnQswr0vIRAkaIAJ9ZaKFHd+uXh5JlZWdOVBKBxYX2MgCfTrGr
-YJBzspvRMXG7fm0Ckt9uMU8=
-=Vx5k
+iD8DBQFFw4HEKRy60XGEcJIRAhwwAJ9iKiP6S0uvNsyR05Qnh2FzKltKtACgmWFL
+xpsYK+S4eXaJe7+tK+IFwqo=
+=AnHw
 -----END PGP SIGNATURE-----
