@@ -1,1 +1,3 @@
 MD5 615e63d27802c3cc2b96cb8f7553b257 libpixman-0.1.1.tar.gz 361389
+RMD160 f499dfbf40f7acaafa5dfd86503734d38e269a89 libpixman-0.1.1.tar.gz 361389
+SHA256 56f1e616dfa3870ab66ed0f35136cf4e479c85a38cb03dc38b2e359890f3ccd7 libpixman-0.1.1.tar.gz 361389
