@@ -1,1 +1,3 @@
 MD5 3ac4f267c788c695a5d9f806ecc59af6 libpixman-0.1.2.tar.gz 367637
+RMD160 d72a6e58eba04b56992a63e8056589fa89399b10 libpixman-0.1.2.tar.gz 367637
+SHA256 175c2e35d22274e2368cea4f2cafa4f1c1fb63b2ed0f6531e70ab98df27fbef3 libpixman-0.1.2.tar.gz 367637
