@@ -1,6 +1,6 @@
-# Copyright 1999-2005 Gentoo Foundation
+# Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/libpixman/Attic/libpixman-0.1.3.ebuild,v 1.7 2006/11/04 11:26:47 vapier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/libpixman/Attic/libpixman-0.1.3.ebuild,v 1.8 2007/02/02 18:23:45 gustavoz Exp $
 
 DESCRIPTION="A generic library for manipulating pixel regions"
 HOMEPAGE="http://cairographics.org/"
@@ -8,7 +8,7 @@ SRC_URI="http://cairographics.org/snapshots/${P}.tar.gz"
 
 LICENSE="X11"
 SLOT="0"
-KEYWORDS="alpha ~amd64 arm ~hppa ia64 ~mips ~ppc ppc64 s390 ~sparc ~x86"
+KEYWORDS="alpha ~amd64 arm ~hppa ia64 ~mips ~ppc ppc64 s390 sparc ~x86"
 IUSE=""
 
 DEPEND="virtual/libc"
