@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/libpixman
-# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/libpixman/Attic/ChangeLog,v 1.26 2005/09/13 19:58:32 agriffis Exp $
+# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/libpixman/Attic/ChangeLog,v 1.27 2007/02/02 18:23:45 gustavoz Exp $
+
+  02 Feb 2007; Gustavo Zacarias <gustavoz@gentoo.org>
+  libpixman-0.1.3.ebuild:
+  Stable on sparc
 
   13 Sep 2005; Aron Griffis <agriffis@gentoo.org> libpixman-0.1.3.ebuild:
   Mark 0.1.3 stable on alpha
